[tool.poetry]
name = "quantfreedom"
version = "0.2.0.0"
description = "I don't want to put a description here So I wont"
authors = ["Neo <quantfreedom1022@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
dash = "2.9.1"
dash-bootstrap-templates = "1.1.1"
ipykernel = "6.25.0"
ipywidgets = "8.1.1"
jupyter-dash = "0.4.2"
notebook = "6.5.6"
numba = "0.58.1"
numpy = "1.26.1"
pandas = "2.1.1"
plotly = "5.17.0"
tables = "3.9.2"
kaleido = [
{version="0.1.0.post1", markers="sys_platform == 'win32'", source = "pypi"},
{version="0.2.1", markers="sys_platform == 'darwin'", source = "pypi"},
{version="0.2.1", markers="sys_platform == 'linux'", source = "pypi"},
]

aws-cdk-lib = { version = "2.133.0", optional = true }
bcrypt = {version = "4.1.2", optional = true}
cryptography = {version = "42.0.5", optional = true}
fastapi = { version = "0.110.0", optional = true }
httpx = { version = "0.27.0", optional = true }
mangum = { version = "0.17.0", optional = true }
mysql-connector-python = { version = "8.3.0", optional = true }
pyjwt = {version = "2.8.0", optional = true}
uvicorn = { version = "0.29.0", optional = true}

griffe = { version = "0.38.0", optional = true }
mkdocs = { version = "1.5.3", optional = true }
mkdocstrings = { version = "0.24.0", optional = true }
mkdocs-gen-files = { version = "0.5.0", optional = true }
mkdocs-material = { version = "9.4.14", optional = true }
mkdocs-open-in-new-tab = { version = "1.0.3", optional = true }
python-multipart = {version = "0.0.9", optional = true}

[tool.poetry.extras]
dev = ["aws-cdk-lib", "bcrypt", "cryptography", "fastapi", "httpx", "mangum", "mysql-connector-python", "pyjwt", "uvicorn"]
docs = ["mkdocs", "griffe", "mkdocs-material", "mkdocstrings", "mkdocs-gen-files", "mkdocs-open-in-new-tab"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"