[tool.poetry]
name = "quantfreedom"
version = "0.2.0.2"
description = "I don't want to put a description here, so I wont"
authors = ["Neo <quantfreedom1022@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
dash = "2.17.0"
dash-bootstrap-templates = "1.1.2"
ipykernel = "6.29.4"
ipywidgets = "8.1.3"
jupyter-dash = "0.4.2"
notebook = "7.2.0"
numpy = "1.26.4"
pandas = "2.2.2"
plotly = "5.22.0"
poetry = "1.8.3"
tables = "3.9.2"
kaleido = [
{version="0.1.0.post1", markers="sys_platform == 'win32'", source = "pypi"},
{version="0.2.1", markers="sys_platform == 'darwin'", source = "pypi"},
{version="0.2.1", markers="sys_platform == 'linux'", source = "pypi"},
]

aws-cdk-lib = { version = "2.143.0", optional = true }
bcrypt = {version = "4.1.3", optional = true}
cryptography = {version = "42.0.7", optional = true}
fastapi = { version = "0.111.0", optional = true }
httpx = { version = "0.27.0", optional = true }
mangum = { version = "0.17.0", optional = true }
mysql-connector-python = { version = "8.4.0", optional = true }
pyjwt = {version = "2.8.0", optional = true}
uvicorn = { version = "0.30.0", optional = true}

griffe = { version = "0.45.2", optional = true }
mkdocs = { version = "1.6.0", optional = true }
mkdocs-gen-files = { version = "0.5.0", optional = true }
mkdocs-literate-nav = {version = "0.6.1", optional = true}
mkdocs-material = { version = "9.5.25", optional = true }
mkdocs-open-in-new-tab = { version = "1.0.3", optional = true }
mkdocs-redirects = { version = "1.2.1", optional = true }
mkdocstrings = {version = "0.25.1", optional = true, extras = ["python"]}
python-multipart = {version = "0.0.9", optional = true}

[tool.poetry.extras]
dev = ["aws-cdk-lib", "bcrypt", "cryptography", "fastapi", "httpx", "mangum", "mysql-connector-python", "pyjwt", "uvicorn"]
docs = ["griffe", "mkdocs", "mkdocs-gen-files", "mkdocs-literate-nav", "mkdocs-material", "mkdocs-open-in-new-tab", "mkdocs-redirects", "mkdocstrings", "python-multipart"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"